vendor/tt-call/tests/ui/type-fn-return-eof.stderr
error: no rules expected the token `->`
 --> tests/ui/type-fn-return-eof.rs:5:21
  |
5 |     input = [{ fn() -> }]
  |                     ^^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
